--- a/index.css
+++ b/index.css
@@ -75,8 +75,13 @@ textarea {
 
 .hide-reply {
     display: none;
+    width: 300px;
 }
+.main-replies {
+    margin-top: 0px;
+    padding: 0px;
 
+}
 /* Main voom feed  */
 
 .main-vooms {
@@ -85,7 +90,7 @@ textarea {
     flex-wrap: wrap;
     gap: 15px;
     margin-top: 10px;
-    border-top: 0.5px solid rgba(61, 58, 58, 0.308);
+    border-top: 0.5px solid rgba(110, 108, 108, 0.308);
     width: 350px;
     padding-top: 10px;
     padding-right: 4px;
@@ -105,6 +110,7 @@ textarea {
     padding-bottom: 0px;
     margin-bottom: 0px;
 }
+
 .voom-icons {
     display: flex;
     flex-direction: row;
@@ -133,12 +139,36 @@ i {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 15px;
-    margin-top: 15px;
-    border-top: 1px solid rgba(0, 0, 0, 0.308);
-    width: 345px;
-    padding-top: 15px;
+    gap: 10px;
+    padding-left: 0px;
+    border-top: 0.5px solid rgba(187, 176, 176, 0.377);
+    width: 300px;
+    padding-top: 10px;
     padding-right: 4px;
-    font-size: 15px;
-    line-height: 1.3;
+    padding-bottom: 0px;
+    font-size: 14px;
+    line-height: 1.2;
+    margin: 8px 0px 4px 60px;
+    
 }
+
+.reply-voom-icons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    /* width: 200px; */
+}
+.revoom-tweets {
+    width: 220px;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+/* .reply-voom-oute {
+margin: 10px 0 10px 40px;
+} */
